Undo prettier changes

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test": "jest",
     "flow": "flow",
     "lint": "eslint .",
-    "build":
-      "babel --no-babelrc --plugins=syntax-jsx,syntax-class-properties,syntax-object-rest-spread,transform-flow-strip-types src --out-dir dist --ignore '**/__tests__/**'",
+    "build": "babel --no-babelrc --plugins=syntax-jsx,syntax-class-properties,syntax-object-rest-spread,transform-flow-strip-types src --out-dir dist --ignore '**/__tests__/**'",
     "prepublish": "yarn build"
   },
   "keywords": [
@@ -32,14 +31,12 @@
     "type": "git",
     "url": "git+https://github.com/react-navigation/react-navigation-tabs.git"
   },
-  "author":
-    "Satyajit Sahoo <satyajit.happy@gmail.com> (https://github.com/satya164/)",
+  "author": "Satyajit Sahoo <satyajit.happy@gmail.com> (https://github.com/satya164/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/react-navigation/react-navigation-tabs/issues"
   },
-  "homepage":
-    "https://github.com/react-navigation/react-navigation-tabs#readme",
+  "homepage": "https://github.com/react-navigation/react-navigation-tabs#readme",
   "dependencies": {
     "hoist-non-react-statics": "^2.5.0",
     "prop-types": "^15.6.0",
@@ -79,8 +76,14 @@
   },
   "jest": {
     "preset": "react-native",
-    "setupFiles": ["<rootDir>/__setup__/enzyme.js"],
-    "modulePathIgnorePatterns": ["<rootDir>/example/node_modules"],
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "setupFiles": [
+      "<rootDir>/__setup__/enzyme.js"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
