--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "react": "*",
     "react-native": "*",
     "react-native-gesture-handler": "^1.0.0",
-    "react-native-reanimated": "^1.0.0-alpha",
+    "react-native-reanimated": "^1.0.0-alpha"
+  },
+  "optionalDependencies": {
     "react-native-screens": "^1.0.0 || ^1.0.0-alpha"
   },
   "husky": {
