--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
   "dependencies": {
     "hoist-non-react-statics": "^2.5.0",
     "prop-types": "^15.6.1",
-    "react-lifecycles-compat": "^3.0.4",
     "react-native-tab-view": "^1.4.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^7.5.0",
     "@expo/vector-icons": "^6.2.0",
+    "@react-navigation/core": "^3.5.0-alpha.7",
+    "@react-navigation/native": "^3.6.0-alpha.1",
     "babel-jest": "^21.2.0",
     "commitlint": "^7.5.2",
     "conventional-changelog-cli": "^2.0.12",
@@ -57,11 +58,10 @@
     "husky": "^1.3.1",
     "jest": "^21.2.1",
     "prettier": "^1.8.2",
-    "react": "16.5.0",
-    "react-dom": "16.5.0",
-    "react-native": "~0.57.1",
+    "react": "16.8.3",
+    "react-dom": "16.8.6",
+    "react-native": "~0.59.8",
     "react-native-reanimated": "^1.0.0-alpha.12",
-    "react-navigation": "^3.3.2",
     "react-test-renderer": "16.5.0",
     "release-it": "^10.2.0"
   },
