--- a/example/package.json
+++ b/example/package.json
@@ -9,16 +9,18 @@
   },
   "main": "App.js",
   "dependencies": {
-    "@expo/vector-icons": "^9.0.0",
-    "@react-navigation/core": "^3.1.1",
-    "@react-navigation/native": "^3.1.5",
-    "expo": "32.0.6",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-navigation/core": "3.5.0-alpha.7",
+    "@react-navigation/native": "^3.6.0-alpha.1",
+    "expo": "^33.0.7",
+    "expo-asset": "^6.0.0",
+    "expo-constants": "~5.0.1",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-safe-area-view": "^0.13.1",
-    "react-native-screens": "^1.0.0-alpha.22",
+    "react-native-screens": "1.0.0-alpha.22",
     "react-native-tab-view": "^1.2.0",
-    "react-navigation": "^3.3.2"
+    "react-navigation-stack": "1.4.0-alpha.0"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.2.0",
