--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "hoist-non-react-statics": "^3.3.0",
     "react-lifecycles-compat": "^3.0.4",
+    "react-native-safe-area-context": "^0.5.0",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-tab-view": "^2.9.0"
   },
